sherpa-onnx/c-api/c-api.h

/** @brief Non-streaming decoding state for one utterance. */
typedef struct SherpaOnnxOfflineStream SherpaOnnxOfflineStream;
/**
 * @brief Configuration for spoken language identification.
 *
 * The current implementation uses Whisper-based models.
 *
 * Example using `sherpa-onnx-whisper-tiny`:
 *
 * @code
 * SherpaOnnxSpokenLanguageIdentificationConfig config;
 * memset(&config, 0, sizeof(config));
 * config.whisper.encoder = "./sherpa-onnx-whisper-tiny/tiny-encoder.int8.onnx";
 * config.whisper.decoder = "./sherpa-onnx-whisper-tiny/tiny-decoder.int8.onnx";
 * config.num_threads = 1;
 * config.provider = "cpu";
 * @endcode
 */
typedef struct SherpaOnnxSpokenLanguageIdentificationConfig {
  /** Whisper model configuration. */
  SherpaOnnxSpokenLanguageIdentificationWhisperConfig whisper;
  /** Number of inference threads. */
  int32_t num_threads;
  /** Non-zero to print debug information. */
  int32_t debug;
  /** Execution provider such as `"cpu"`. */
  const char *provider;
} SherpaOnnxSpokenLanguageIdentificationConfig;
/** @brief Opaque spoken-language identification handle. */
typedef struct SherpaOnnxSpokenLanguageIdentification
    SherpaOnnxSpokenLanguageIdentification;
/**
 * @brief Create a spoken-language identifier.
 *
 * @param config Spoken-language identification configuration.
 * @return A newly allocated identifier on success, or NULL on error. Free it
 *         with SherpaOnnxDestroySpokenLanguageIdentification().
 */
SHERPA_ONNX_API const SherpaOnnxSpokenLanguageIdentification *
SherpaOnnxCreateSpokenLanguageIdentification(
    const SherpaOnnxSpokenLanguageIdentificationConfig *config);
/**
 * @brief Destroy a spoken-language identifier.
 *
 * @param slid A pointer returned by
 * SherpaOnnxCreateSpokenLanguageIdentification().
 */
SHERPA_ONNX_API void SherpaOnnxDestroySpokenLanguageIdentification(
    const SherpaOnnxSpokenLanguageIdentification *slid);
/**
 * @brief Create an offline stream for spoken-language identification.
 *
 * Feed audio to the returned stream with SherpaOnnxAcceptWaveformOffline(), and
 * then call SherpaOnnxSpokenLanguageIdentificationCompute().
 *
 * @param slid A pointer returned by
 * SherpaOnnxCreateSpokenLanguageIdentification().
 * @return A newly allocated offline stream. Free it with
 *         SherpaOnnxDestroyOfflineStream().
 */
SHERPA_ONNX_API SherpaOnnxOfflineStream *
SherpaOnnxSpokenLanguageIdentificationCreateOfflineStream(
    const SherpaOnnxSpokenLanguageIdentification *slid);
/**
 * @brief Result of spoken-language identification.
 *
 * Free this object with SherpaOnnxDestroySpokenLanguageIdentificationResult().
 */
typedef struct SherpaOnnxSpokenLanguageIdentificationResult {
  /**
   * Predicted language code such as `"en"`, `"de"`, `"zh"`, or `"es"`.
   */
  const char *lang;
} SherpaOnnxSpokenLanguageIdentificationResult;
/**
 * @brief Run spoken-language identification on an offline stream.
 *
 * Example:
 *
 * @code
 * SherpaOnnxOfflineStream *stream =
 *     SherpaOnnxSpokenLanguageIdentificationCreateOfflineStream(slid);
 * SherpaOnnxAcceptWaveformOffline(stream, wave->sample_rate, wave->samples,
 *                                 wave->num_samples);
 * const SherpaOnnxSpokenLanguageIdentificationResult *result =
 *     SherpaOnnxSpokenLanguageIdentificationCompute(slid, stream);
 * printf("lang=%s\n", result->lang);
 * SherpaOnnxDestroySpokenLanguageIdentificationResult(result);
 * SherpaOnnxDestroyOfflineStream(stream);
 * @endcode
 *
 * @param slid A pointer returned by
 * SherpaOnnxCreateSpokenLanguageIdentification().
 * @param s A pointer returned by
 *          SherpaOnnxSpokenLanguageIdentificationCreateOfflineStream().
 * @return A newly allocated result object. Free it with
 *         SherpaOnnxDestroySpokenLanguageIdentificationResult().
 */
SHERPA_ONNX_API const SherpaOnnxSpokenLanguageIdentificationResult *
SherpaOnnxSpokenLanguageIdentificationCompute(
    const SherpaOnnxSpokenLanguageIdentification *slid,
    const SherpaOnnxOfflineStream *s);
/**
 * @brief Destroy a spoken-language identification result.
 *
 * @param r A pointer returned by
 * SherpaOnnxSpokenLanguageIdentificationCompute().
 */
SHERPA_ONNX_API void SherpaOnnxDestroySpokenLanguageIdentificationResult(
    const SherpaOnnxSpokenLanguageIdentificationResult *r);